--- a/pom.xml
+++ b/pom.xml
@@ -17,31 +17,26 @@
         <sonar.projectKey>A2APayment</sonar.projectKey>
         <sonar.projectName>A2APayment_CBX_rev69_2025_03_06</sonar.projectName>
         <sonar.host.url>http://127.0.0.1:9000</sonar.host.url>
-        <sonar.javascript.node.maxspace>4096</sonar.javascript.node.maxspace>
-        <sonar.login>admin</sonar.login>
-        <sonar.password>sqa_ff52edc710ccb3579d6f4b533298823473613300</sonar.password>     
     </properties>
 
     <build>
-  <plugins>
-        <plugin>
-                                    <groupId>org.sonarsource.scanner.maven</groupId>
-                                    <artifactId>sonar-maven-plugin</artifactId>
-                                    <version>3.9.1.2184</version> <!-- Use the latest version -->
-                                     
-                                    <executions>
-                                             <execution>
-                                                      <phase>verify</phase>
-                                                      <goals>
-                                                               <goal>sonar</goal>
-                                                      </goals>
-                                             </execution>
-                                    </executions>
-                                    <configuration>
-                                             <sonar.host.url> http://127.0.0.1:9000</sonar.host.url>
-                                             <sonar.login>sqa_ff52edc710ccb3579d6f4b533298823473613300</sonar.login> <!-- Use the Jenkins environment variable here -->
-                                    </configuration>
-                           </plugin>
-  </plugins>
+        <plugins>
+            <plugin>
+                <groupId>org.sonarsource.scanner.maven</groupId>
+                <artifactId>sonar-maven-plugin</artifactId>
+                <version>3.9.1.2184</version> <!-- Use the latest version -->
+                <executions>
+                    <execution>
+                        <phase>verify</phase>
+                        <goals>
+                            <goal>sonar</goal>
+                        </goals>
+                    </execution>
+                </executions>
+                <configuration>
+                    <sonar.login>sqa_ff52edc710ccb3579d6f4b533298823473613300</sonar.login> <!-- Use a secure token -->
+                </configuration>
+            </plugin>
+        </plugins>
     </build>
 </project>
